--- a/.config/i3/config
+++ b/.config/i3/config
@@ -56,6 +56,8 @@ bindsym XF86KbdBrightnessUp exec ~/.config/scripts/kblight up
 bindsym XF86MonBrightnessDown exec ~/.config/scripts/monlight down
 bindsym XF86MonBrightnessUp exec ~/.config/scripts/monlight up
 
+# Screenshot
+bindsym $mod+F4 exec ~/.config/scripts/screenshot
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
