--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
-gtk-theme-name=adw-gtk3-dark
+gtk-theme-name=HighContrastInverse
 gtk-icon-theme-name=Adwaita
-gtk-font-name=Adwaita Sans 11
+gtk-font-name=Adwaita Sans Medium 11
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
