--- a/.config/i3/i3status.conf
+++ b/.config/i3/i3status.conf
@@ -56,11 +56,11 @@ memory {
 }
 
 tztime local {
-        format = "   %Y-%m-%d  %H:%M "
+        format = "   %Y-%m-%d  %H  %M "
 }
 
 volume master {
-        format = "   %volume "
+        format = "   %volume "
         format_muted = "   muted (%volume)"
         device = "default"
         mixer = "Master"
